# autoSerie

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
doxygen/: doxygen.cfg
include/: config.h
include/autoSerie/: serial.hh  serializable.hh
include/autoSerie/serial/: arithmetic.hxx  config.h  fwd.hh  fwd.hxx  object.hxx  serial.hxx  serial_utils.hh  string.hxx  tuple.hxx  type_utils.hxx  vector.hxx  vector_utils.hh
include/autoSerie/utils/: cnull.hh  error.hh  execute.hh  getset.hh  log.hh  range.hh
test/: Makefile.am  Makefile.in  execute  execute.cc  gentest.sh  local.mk  serial.cc  serial_string.cc  serial_tuple.cc  serial_vector.cc  testlist
